fix: - fixed occurance of a wobble when the dialog window gets opened (overflow: auto -> caused the issue)

--- a/style/add_contact.css
+++ b/style/add_contact.css
@@ -12,7 +12,6 @@ dialog[open] {
    top: 0;
    width: 100%;
    height: 100%;
-   overflow: auto;
    background-color: rgba(0, 0, 0, 0.4);
    border: none;
 }
@@ -24,7 +23,8 @@ dialog[open] {
    width: 1200px;
    min-height: 500px;
    transform: translateX(200%);
-   transition: transform 0.8s ease-in-out;
+   
+   transition: transform 1s ease-in-out;
 }
 
 .main-left {
